--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -1,4 +1,4 @@
-/* task 19 */
+/* task 21 */
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
@@ -526,14 +526,10 @@ ul.row {
 
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .footer-copyright {
@@ -550,4 +546,9 @@ ul.row {
     content: "";
     display: table;
     clear: both;
+}
+
+[class^="col-"] {
+    float: left;
+    padding: 0.5rem;
 }
